--- a/index.html
+++ b/index.html
@@ -554,9 +554,18 @@
             </div>
             
             <div class="flex flex-col md:flex-row justify-between items-center gap-4 text-xs font-medium pt-8 border-t border-slate-900">
-                <div>© 2025 FinalClick Automation. All rights reserved.</div>
-            </div>
-        </div>
+    <div>©️ 2025 FinalClick Automation. All rights reserved.</div>
+
+    <div class="flex gap-4">
+        <a href="/privacy" class="hover:text-indigo-400 transition-colors">
+            Privacy Policy
+        </a>
+        <span>|</span>
+        <a href="/terms" class="hover:text-indigo-400 transition-colors">
+            Terms of Service
+        </a>
+    </div>
+</div>
     </footer>
 
     <!-- Logic Script -->
@@ -813,3 +822,4 @@
     </script>
 </body>
 </html>
+
