Add social icons to footer

--- a/index.html
+++ b/index.html
@@ -516,6 +516,23 @@
                         <span class="font-black text-2xl tracking-tight">FinalClick</span>
                     </div>
                     <p class="text-sm leading-relaxed">We engineer custom AI Lead Management Systems that turn traffic into revenue.</p>
+                    <div class="flex gap-4 mt-4">
+  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="instagram" class="w-4 h-4"></i>
+  </a>
+
+  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="facebook" class="w-4 h-4"></i>
+  </a>
+
+  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="linkedin" class="w-4 h-4"></i>
+  </a>
+
+  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="mail" class="w-4 h-4"></i>
+  </a>
+</div>
                     <div class="flex gap-4">
                         <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all"><i data-lucide="twitter" class="w-4 h-4"></i></a>
                         <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all"><i data-lucide="linkedin" class="w-4 h-4"></i></a>
@@ -822,4 +839,5 @@
     </script>
 </body>
 </html>
+
 
