--- a/index.html
+++ b/index.html
@@ -517,14 +517,27 @@
                     </div>
                     <p class="text-sm leading-relaxed">We engineer custom AI Lead Management Systems that turn traffic into revenue.</p>
                     <div class="flex gap-4 mt-4">
-  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+  <a href="https://www.instagram.com/finalclick.online" target="_blank" rel="noopener"
+     class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
     <i data-lucide="instagram" class="w-4 h-4"></i>
   </a>
 
-  <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+  <a href="https://www.facebook.com/share/1awQ1bpL1W/" target="_blank" rel="noopener"
+     class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
     <i data-lucide="facebook" class="w-4 h-4"></i>
-  </a>                    
-</div>
+  </a>
+
+  <a href="https://www.linkedin.com/company/110784968/" target="_blank" rel="noopener"
+     class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="linkedin" class="w-4 h-4"></i>
+  </a>
+
+  <a href="mailto:support@finalclick.online"
+     class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
+    <i data-lucide="mail" class="w-4 h-4"></i>
+  </a>
+</div>                
+
                     <div class="flex gap-4">
                         <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all"><i data-lucide="twitter" class="w-4 h-4"></i></a>
                         <a href="#" class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all"><i data-lucide="linkedin" class="w-4 h-4"></i></a>
@@ -831,6 +844,7 @@
     </script>
 </body>
 </html>
+
 
 
 
