--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     <i data-lucide="instagram" class="w-4 h-4"></i>
   </a>
 
-  <a href="https://www.facebook.com/share/1awQ1bpL1W/" target="_blank" rel="noopener"
+  <a href="https://www.facebook.com" target="_blank" rel="noopener"
      class="w-10 h-10 rounded-full bg-slate-900 flex items-center justify-center hover:bg-indigo-600 hover:text-white transition-all">
     <i data-lucide="facebook" class="w-4 h-4"></i>
   </a>
@@ -846,6 +846,7 @@
     </script>
 </body>
 </html>
+
 
 
 
