--- a/index.html
+++ b/index.html
@@ -592,6 +592,22 @@
 
     <!-- Logic Script -->
 
+    
+    <script
+      id="retell-widget"
+      src="https://dashboard.retellai.com/retell-widget.js"
+      type="module"
+      data-public-key="key_651861c78d64c473891e6"
+      data-agent-id="agent_e49c0ec3bbbc1c3afb391a7717"
+      data-title="Chat with us"
+      data-bot-name="Click_AI"
+      data-popup-message="Waiting to reduce your work"
+      data-show-ai-popup="true"
+      data-show-ai-popup-time="3"
+      data-auto-open="false"
+      data-dynamic='{"key": "value"}'
+    ></script>
+
     <script>
         
         // Initialize Icons
@@ -846,6 +862,7 @@
     </script>
 </body>
 </html>
+
 
 
 
