--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
       data-public-key="key_47dab3c2eded26b0a7877"
       data-agent-id="agent_51b3a19c3f2a71265e8060af56"
       data-title="Chat with us"
+      data-agent-version="0"
       data-bot-name="Click_AI"
       data-popup-message="Waiting to reduce your work"
       data-show-ai-popup="true"
@@ -862,6 +863,7 @@
     </script>
 </body>
 </html>
+
 
 
 
